# actuariat_worker_compensation

./: README.md  config.py  pyproject.toml
Notebooks/: Ablation_study.ipynb  Exploration.ipynb  Exploration_NLP.ipynb  Exploration_data.ipynb  final_model.csv
Notebooks/delete/: Exploration.ipynb  Exploration_v2.ipynb  final_model.ipynb  model.ipynb
resultats/: final_model.csv
src/: cv_model.py  submission_pipeline.py
src/utils/: data_processing.py  nlp_processing.py
